
$Id$


2004-11-05 Brett Schwarz <brett_schwarz@yahoo.com>
    * added delete proc for result handle cleanup

2004-11-02 Brett Schwarz <brett_schwarz@yahoo.com>
    * added delete proc for connection handle cleanup

2004-09-20 Brett Schwarz <brett_schwarz@yahoo.com>
    * added preliminary support for dicts in pg_result. Need to have
      Tcl 8.5 or the dicts package extension. Need to set            
      HAVETCL_NEWDICTOBJ manually for now.

2004-08-23 Brett Schwarz <brett_schwarz@yahoo.com>
    * added tcltest script of testing pgtcl.

2004-08-21 Brett Schwarz <brett_schwarz@yahoo.com>
    * Made the result handle into a command, and added associated command
      dispatcher.

2004-08-18 Brett Schwarz <brett_schwarz@yahoo.com>
    * Added another way to specify the connection string to pg::connect:
      pg::connect -connlist {host myhost port myport ...}. This is similiar
      to -conninfo, except that the arg is a key value list.

    * Added -connhandle option to pg::connect to specify the connection
      handle name. If not specified, then connection handle name is
      derived by pgtcl (as before).

2004-08-16 Brett Schwarz <brett_schwarz@yahoo.com>
    * added Pg_results (pg::results, pg_results) command that returns
      the result handles for a particular connection

2004-08-15 Brett Schwarz <brett_schwarz@yahoo.com>
    * Added new command pg::conninfo that returns a list of PG connection
      handles

2004-07-02 Brett Schwarz <brett_schwarz@yahoo.com>
    * added basic capability to use the connection handle as a command
    * since connection handle can be a command now, I made the returned
      handle namespace qualified, with respect to the calling namespace

2004-06-29 Brett Schwarz <brett_schwarz@yahoo.com>
    * Added proper Tcl namespace support (i.e. ::pg::connect)

2004-06-28 Karl Lehenbauer <karl-pg@sc.com>
    * Version 1.4 released

2004-06-22 Karl Lehenbauer <karl-pg@sc.com>